--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,70 @@ html {
   overflow-x: hidden;
 }
 
+header {
+  display: block;
+}
+
+.header-div {
+  list-style: none;
+  margin: 0.5rem 11px 2rem 6px;
+  text-align: left;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+  align-items: center;
+  border: 1px solid black;
+  padding: 0;
+}
+
+.date {
+  text-align: right;
+  margin: -1.5rem 11px 2rem 0;
+}
+
+.header-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  margin: 1rem -8px -2rem auto;
+}
+
+.header-div h4 {
+  margin: -0.5rem 11px 0 6px;
+  padding-top: 5px;
+}
+
+.item {
+  list-style: none;
+  margin: -1rem 0 2rem 0;
+  text-align: left;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  border-right: 1px solid black;
+  background-color: transparent;
+  padding: 0.3rem;
+  padding-right: 6px;
+}
+
+.item2 {
+  list-style: none;
+  margin: -1rem 0 2rem 0;
+  text-align: left;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  border-right: none;
+  background-color: transparent;
+  padding: 0.3rem;
+  padding-right: 1rem;
+}
+
 h1 {
   display: flex;
   align-items: center;
@@ -89,4 +153,16 @@ form button {
   float: right;
   padding: 0.1rem 0.3rem;
   box-shadow: 3px 3px 3px black;
+}
+
+footer {
+  list-style: none;
+  margin: 6.5rem 11px 2rem 6px;
+  text-align: left;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+  align-items: center;
+  border: 1px solid black;
+  padding: 0.3rem;
 }
