--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
   align-items: center;
   text-align: center;
   margin: 1rem -8px -2rem auto;
+  text-decoration: none;
 }
 
 .header-div h4 {
@@ -92,6 +93,11 @@ h2 {
 .books-list {
   width: 90vw;
   margin: 0 auto;
+}
+
+nav {
+  margin: 0 0;
+  margin-left: 408px;
 }
 
 ul .books {
@@ -156,13 +162,37 @@ form button {
 }
 
 footer {
+  display: block;
   list-style: none;
-  margin: 6.5rem 11px 2rem 6px;
+  margin: 11.5rem 13px 0 8px;
   text-align: left;
-  display: flex;
-  gap: 0.5rem;
-  flex-direction: row;
-  align-items: center;
   border: 1px solid black;
   padding: 0.3rem;
+}
+
+.contact p {
+  text-align: center;
+  margin-bottom: 18px;
+}
+
+.contact .text {
+  text-align: center;
+  margin-left: -227px;
+  margin-top: -12px;
+}
+
+.contact-info {
+  text-decoration: dotted;
+  list-style: circle;
+}
+
+ul .contact-info,
+.contact-info li {
+  background-color: transparent;
+  border: none;
+  text-align: center;
+  margin: 0;
+  margin-left: 170px;
+  text-decoration: dotted;
+  list-style: circle;
 }
